# second-brain

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  compose.local.yaml  compose.mcp-local.yaml  compose.n8n.yaml  compose.override.yaml  compose.yaml  env.example  pyproject.toml
deploy/: README.md  backup.env.example  backup.sh  bootstrap-n8n-test-fixtures.sh  bootstrap-n8n.sh  capture-service.env.example  container-entrypoint.sh  deploy.sh  local-down.sh  local-n8n-init.py  local-n8n-reset.sh  local-reset.sh  local-stack-down.sh  local-stack-up.sh  local-up.sh  n8n.env.example  open-n8n-tunnel.sh  provision-host.sh  restore-validate.sh  second-brain-backup.cron  setup-local-n8n.sh  test-container-packaging.sh  test-e2e-writer-failure.sh  test-n8n-error-workflow.sh  test-n8n-foundation.sh  test-writer-safe-failure.sh  test-writer-service.sh  verify.sh  writer-service.env.example  writer-stub.env.example
docs/: 01-discord.md  02-ec2-n8n.md  03-gemini.md  04-vault.md  05-mcp.md  06-obsidian.md  ARCHITECTURE.md  MVP.md  OPERATIONS.md  TechDebt.md  tech_debt.md  vault-structure.md
docs/tech_debt_1/: README.md  TD-001-sanitize-local-worker-exception-messages.md  TD-003-sqlite-event-loop-contention.md  TD-004-sqlite-runtime-watchdogs.md  TD-005-validate-legacy-schema-adoption.md  TD-006-wal-aware-backup-restore.md  TD-007-sqlite-runtime-constructor-validation.md  TD-010-idempotent-terminal-failure-callbacks.md
mcp/: update-paths.sh
prompts/: bouncer.md  daily-digest.md  sorter.md  weekly-summary.md
tech_debt_1/: README.md  TD-002-shutdown-cleanup-resilience.md  TD-008-centralize-structured-logging.md  TD-009-durable-receipt-repair-tracking.md  TD-010-idempotent-terminal-failure-callbacks.md  TD-011-configuration-preflight-command.md  TD-012-background-task-liveness-monitoring.md  TD-013-persist-vault-write-metadata.md  TD-014-simplify-local-developer-workflow.md  TD-015-docker-compose-lifecycle-broken.md
tests/: conftest.py  support.py
writer-service/: Dockerfile  docker-entrypoint.sh
writer-stub/: Dockerfile  app.py
(+207 files in other folders)
